# xiao_ibeacon

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  sdkconfig.defaults
components/ble_beacon/: CMakeLists.txt  ble_beacon.c  ble_beacon.h  common.h  gap.c  gap.h
components/power_manager/: CMakeLists.txt  power_manager.c  power_manager.h
components/sensor_t_a_h/: CMakeLists.txt  Kconfig  common.c  sensor_api.c  sensor_t_a_h.c
components/sensor_t_a_h/include/: sensor_api.h  sensor_t_a_h.h
components/sensor_t_a_h/priv_include/: common.h
main/: CMakeLists.txt  main.c
test_scripts/: README.md  ble_beacon_scanner.py  debug_scanner.py  setup_venv.bat  setup_venv.sh
